--- a/index.html
+++ b/index.html
@@ -13,43 +13,42 @@
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/main.css" />
 
     <title>
       Frontend Mentor | Fylo landing page with dark theme and features grid
     </title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
-    <nav>
-      <ul>
-        <li>Features</li>
-        <li>Team</li>
-        <li>Sign In</li>
-      </ul>
-    </nav>
+    <header class="intro">
+      <nav class="nav">
+        <figure class="logo">
+          <img src="./images/logo.svg" alt="Fylo logo" />
+        </figure>
 
-    <header>
-      <h1>All your files in one secure location, accessible anywhere.</h1>
-      <p>
+        <ul class="nav__list">
+          <li class="nav__item">Features</li>
+          <li class="nav__item">Team</li>
+          <li class="nav__item">Sign In</li>
+        </ul>
+      </nav>
+
+      <figure class="intro__illustration">
+        <img src="./images/illustration-intro.png" alt="" />
+      </figure>
+
+      <h1 class="intro__heading intro__heading--main">
+        All your files in one secure location, accessible anywhere.
+      </h1>
+      <p class="intro__heading intro__heading--sub">
         Fylo stores all your most important files in one secure location. Access
         them wherever you need, share and collaborate with friends family, and
         co-workers.
       </p>
-      <button>Get Started</button>
+      <button class="cta">Get Started</button>
     </header>
 
     <main>
@@ -169,7 +168,7 @@
           <li>Press</li>
           <li>Blog</li>
         </ul>
-        <h3>Contact Us</h2>
+        <h3>Contact Us</h3>
         <ul>
           <li>Terms</li>
           <li>Privacy</li>
