style perks section

--- a/index.html
+++ b/index.html
@@ -51,37 +51,55 @@
       <button class="cta">Get Started</button>
     </header>
 
-    <main>
-      <section>
-        <ul>
-          <li>
-            <h3>Access your files, anywhere</h3>
-            <p>
+    <main class="main">
+      <section class="perks">
+        <ul class="perks__list">
+          <li class="perks__item">
+            <figure class="perks__icon">
+              <img
+                src="./images/icon-access-anywhere.svg"
+                alt="access anywhere"
+              />
+            </figure>
+            <h2 class="perks__title">Access your files, anywhere</h2>
+            <p class="perks__description">
               The ability to use a smartphone, tablet, or computer to access
               your account means your files follow you everywhere.
             </p>
           </li>
 
-          <li>
-            <h3>Security you can trust</h3>
-            <p>
+          <li class="perks__item">
+            <figure class="perks__icon">
+              <img src="./images/icon-security.svg" alt="security icon" />
+            </figure>
+            <h2 class="perks__title">Security you can trust</h2>
+            <p class="perks__description">
               2-factor authentication and user-controlled encryption are just a
               couple of the security features we allow to help secure your
               files.
             </p>
           </li>
 
-          <li>
-            <h3>Real-time collaboration</h3>
-            <p>
+          <li class="perks__item">
+            <figure class="perks__icon">
+              <img
+                src="./images/icon-collaboration.svg"
+                alt="collaboration icon"
+              />
+            </figure>
+            <h2 class="perks__title">Real-time collaboration</h2>
+            <p class="perks__description">
               Securely share files and folders with friends, family and
               colleagues for live collaboration. No email attachments required.
             </p>
           </li>
 
-          <li>
-            <h3>Store any type of file</h3>
-            <p>
+          <li class="perks__item">
+            <figure class="perks__icon">
+              <img src="./images/icon-any-file.svg" alt="any file icon" />
+            </figure>
+            <2 class="perks__title">Store any type of file</2>
+            <p class="perks__description">
               Whether you're sharing holidays photos or work documents, Fylo has
               you covered allowing for all file types to be securely stored and
               shared.
