--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <figure class="perks__icon">
               <img src="./images/icon-any-file.svg" alt="any file icon" />
             </figure>
-            <2 class="perks__title">Store any type of file</2>
+            <h2 class="perks__title">Store any type of file</h2>
             <p class="perks__description">
               Whether you're sharing holidays photos or work documents, Fylo has
               you covered allowing for all file types to be securely stored and
