style testimonials section

--- a/index.html
+++ b/index.html
@@ -169,36 +169,51 @@
         </div>
       </section>
 
-      <section>
-        <ul>
-          <li>
-            <p>
+      <section class="testimonials">
+        <ul class="testimonials__list">
+          <li class="testimonials__item">
+            <p class="testimonials__msg">
               Fylo has improved our team productivity by an order of magnitude.
               Since making the switch our team has become a well-oiled
               collaboration machine.
             </p>
-            <h3>Satish Patel</h3>
-            <h4>Founder & CEO, Huddle</h4>
+            <div class="testimonials__author author">
+              <figure class="author__img">
+                <img src="./images/profile-1.jpg" alt="Satish Patel" />
+              </figure>
+              <h3 class="author__name">Satish Patel</h3>
+              <h4 class="author__title">Founder & CEO, Huddle</h4>
+            </div>
           </li>
 
-          <li>
-            <p>
+          <li class="testimonials__item">
+            <p class="testimonials__msg">
               Fylo has improved our team productivity by an order of magnitude.
               Since making the switch our team has become a well-oiled
               collaboration machine.
             </p>
-            <h3>Bruce McKenzie</h3>
-            <h4>Founder & CEO, Huddle</h4>
+            <div class="testimonials__author author">
+              <figure class="author__img">
+                <img src="./images/profile-2.jpg" alt="Bruce McKenzie" />
+              </figure>
+              <h3 class="author__name">Bruce McKenzie</h3>
+              <h4 class="author__title">Founder & CEO, Huddle</h4>
+            </div>
           </li>
 
-          <li>
-            <p>
+          <li class="testimonials__item">
+            <p class="testimonials__msg">
               Fylo has improved our team productivity by an order of magnitude.
               Since making the switch our team has become a well-oiled
               collaboration machine.
             </p>
-            <h3>Iva Boyd</h3>
-            <h4>Founder & CEO, Huddle</h4>
+            <div class="testimonials__author author">
+              <figure class="author__img">
+                <img src="./images/profile-3.jpg" alt="Iva Boyd" />
+              </figure>
+              <h3 class="author__name">Iva Boyd</h3>
+              <h4 class="author__title">Founder & CEO, Huddle</h4>
+            </div>
           </li>
         </ul>
       </section>
