--- a/index.html
+++ b/index.html
@@ -222,16 +222,20 @@
         </ul>
       </section>
 
-      <section>
-        <form action="">
-          <h3>Get early access today</h3>
-          <p>
-            It only takes a minute to sign up and our free starter tier is
-            extremely generous. If you have any questions, our support team
-            would be happy to help you.
-          </p>
-          <input type="text" />
-          <button>Get Started For Free</button>
+      <section class="sign-up">
+        <h2 class="sign-up__heading">Get early access today</h2>
+        <p class="sign-up__text">
+          It only takes a minute to sign up and our free starter tier is
+          extremely generous. If you have any questions, our support team would
+          be happy to help you.
+        </p>
+        <form class="sign-up__form">
+          <input
+            type="text"
+            class="sign-up__input"
+            placeholder="email@example.com"
+          />
+          <button class="cta">Get Started For Free</button>
         </form>
       </section>
     </main>
