--- a/index.html
+++ b/index.html
@@ -40,19 +40,21 @@
         </ul>
       </nav>
 
-      <figure class="intro__illustration">
-        <img src="./images/illustration-intro.png" alt="" />
-      </figure>
+      <div class="intro-container">
+        <figure class="intro__illustration">
+          <img src="./images/illustration-intro.png" alt="" />
+        </figure>
 
-      <h1 class="intro__heading intro__heading--main">
-        All your files in one secure location, accessible anywhere.
-      </h1>
-      <p class="intro__heading intro__heading--sub">
-        Fylo stores all your most important files in one secure location. Access
-        them wherever you need, share and collaborate with friends family, and
-        co-workers.
-      </p>
-      <button class="cta">Get Started</button>
+        <h1 class="intro__heading intro__heading--main">
+          All your files in one secure location, accessible anywhere.
+        </h1>
+        <p class="intro__heading intro__heading--sub">
+          Fylo stores all your most important files in one secure location.
+          Access them wherever you need, share and collaborate with friends
+          family, and co-workers.
+        </p>
+        <button class="cta">Get Started</button>
+      </div>
     </header>
 
     <main class="main">
