add breakpoints - pledge to signup

--- a/index.html
+++ b/index.html
@@ -177,24 +177,22 @@
 
       <section class="testimonials">
         <ul class="testimonials__list">
-          <div class="bg-qutoes-container">
-            <img class="bg-quotes" src="./images/bg-quotes.png" alt="" />
+          <img class="bg-quotes" src="./images/bg-quotes.png" alt="" />
 
-            <li class="testimonials__item">
-              <p class="testimonials__msg">
-                Fylo has improved our team productivity by an order of
-                magnitude. Since making the switch our team has become a
-                well-oiled collaboration machine.
-              </p>
-              <div class="testimonials__author author">
-                <figure class="author__img">
-                  <img src="./images/profile-1.jpg" alt="Satish Patel" />
-                </figure>
-                <h3 class="author__name">Satish Patel</h3>
-                <h4 class="author__title">Founder & CEO, Huddle</h4>
-              </div>
-            </li>
-          </div>
+          <li class="testimonials__item">
+            <p class="testimonials__msg">
+              Fylo has improved our team productivity by an order of magnitude.
+              Since making the switch our team has become a well-oiled
+              collaboration machine.
+            </p>
+            <div class="testimonials__author author">
+              <figure class="author__img">
+                <img src="./images/profile-1.jpg" alt="Satish Patel" />
+              </figure>
+              <h3 class="author__name">Satish Patel</h3>
+              <h4 class="author__title">Founder & CEO, Huddle</h4>
+            </div>
+          </li>
 
           <li class="testimonials__item">
             <p class="testimonials__msg">
