add footer breakpoints

--- a/index.html
+++ b/index.html
@@ -245,47 +245,55 @@
     </main>
 
     <footer class="footer">
-      <figure class="logo">
-        <img src="./images/logo.svg" alt="Fylo logo" />
-      </figure>
+      <div class="logo-container">
+        <figure class="logo">
+          <img src="./images/logo.svg" alt="Fylo logo" />
+        </figure>
 
-      <ul class="footer__list footer__list--info">
-        <li class="footer__item">
-          <img src="./images/icon-location.svg" alt="location" />
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua
-          </p>
-        </li>
-        <li class="footer__item">
-          <img src="./images/icon-phone.svg" alt="location" />
-          <p>+1-543-123-4567</p>
-        </li>
-        <li class="footer__item">
-          <img src="./images/icon-email.svg" alt="location" />
-          <p>example@fylo.com</p>
-        </li>
-      </ul>
+        <div class="footer-container">
+          <ul class="footer__list footer__list--info">
+            <li class="footer__item">
+              <img src="./images/icon-location.svg" alt="location" />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua
+              </p>
+            </li>
+          </ul>
+          <ul class="footer__list footer__list--info">
+            <li class="footer__item">
+              <img src="./images/icon-phone.svg" alt="location" />
+              <p>+1-543-123-4567</p>
+            </li>
+            <li class="footer__item">
+              <img src="./images/icon-email.svg" alt="location" />
+              <p>example@fylo.com</p>
+            </li>
+          </ul>
 
-      <nav class="nav">
-        <ul class="nav__list">
-          <li class="nav__item">About Us</li>
-          <li class="nav__item">Jobs</li>
-          <li class="nav__item">Press</li>
-          <li class="nav__item">Blog</li>
-        </ul>
-        <ul class="nav__list">
-          <li class="nav__item">Contact Us</li>
-          <li class="nav__item">Terms</li>
-          <li class="nav__item">Privacy</li>
-        </ul>
-      </nav>
+          <nav class="nav">
+            <ul class="nav__list">
+              <li class="nav__item">About Us</li>
+              <li class="nav__item">Jobs</li>
+              <li class="nav__item">Press</li>
+              <li class="nav__item">Blog</li>
+            </ul>
+          </nav>
+          <nav class="nav">
+            <ul class="nav__list">
+              <li class="nav__item">Contact Us</li>
+              <li class="nav__item">Terms</li>
+              <li class="nav__item">Privacy</li>
+            </ul>
+          </nav>
 
-      <ul class="footer__list footer__list--socials">
-        <li class="footer__item"><i class="fab fa-facebook-f"></i></li>
-        <li class="footer__item"><i class="fab fa-twitter"></i></li>
-        <li class="footer__item"><i class="fab fa-instagram"></i></li>
-      </ul>
+          <ul class="footer__list footer__list--socials">
+            <li class="footer__item"><i class="fab fa-facebook-f"></i></li>
+            <li class="footer__item"><i class="fab fa-twitter"></i></li>
+            <li class="footer__item"><i class="fab fa-instagram"></i></li>
+          </ul>
+        </div>
+      </div>
 
       <p class="attribution">
         Challenge by
