add error handling using only html/css

--- a/index.html
+++ b/index.html
@@ -235,10 +235,13 @@
         </p>
         <form class="sign-up__form">
           <input
-            type="text"
+            type="email"
             class="sign-up__input"
             placeholder="email@example.com"
+            required
           />
+
+          <p class="error">Please enter a valid email address</p>
           <button class="cta">Get Started For Free</button>
         </form>
       </section>
