--- a/index.html
+++ b/index.html
@@ -176,9 +176,8 @@
       </section>
 
       <section class="testimonials">
+        <img class="bg-quotes" src="./images/bg-quotes.png" alt="" />
         <ul class="testimonials__list">
-          <img class="bg-quotes" src="./images/bg-quotes.png" alt="" />
-
           <li class="testimonials__item">
             <p class="testimonials__msg">
               Fylo has improved our team productivity by an order of magnitude.
@@ -238,6 +237,7 @@
             type="email"
             class="sign-up__input"
             placeholder="email@example.com"
+            aria-label="email"
             required
           />
 
